tests/ui/associated-const.rs
#[typetag::serde]
pub trait Trait {
    const ASSOC: u8;
}

fn main() {}
